<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RideBooking">

    <!-- Main UI -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9392F3">

        <!-- 3-dot menu icon -->

        <!-- Title -->

        <!-- From Field -->

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/icons8_back_40"
            app:layout_constraintBottom_toTopOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.525"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:src="@drawable/icons8_menu_vertical_30"
            app:layout_constraintBottom_toTopOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            android:text="@string/where_are_you_going"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/From"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:background="@android:drawable/editbox_background"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- To Field -->
        <EditText
            android:id="@+id/To"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:background="@android:drawable/editbox_background"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/From"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Date -->
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/To"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Time -->
        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="196dp"
            android:src="@drawable/icons8_december_45"
            app:layout_constraintStart_toEndOf="@id/tvDate"
            app:layout_constraintTop_toTopOf="@id/tvDate" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Time Selection -->
        <GridLayout
            android:id="@+id/timeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:columnCount="3"
            app:layout_constraintTop_toBottomOf="@id/tvTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btnMorning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/_09_00_am"
                android:background="@drawable/time_button_default" />

            <Button
                android:id="@+id/btnAfternoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/_01_30_pm"
                android:background="@drawable/time_button_default" />

            <Button
                android:id="@+id/btnEvening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/_4_00_pm"
                android:background="@drawable/time_button_default" />

            <Button
                android:id="@+id/btnNight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/_11_00_pm"
                android:background="@drawable/time_button_default" />
        </GridLayout>

        <!-- Passengers -->
        <TextView
            android:id="@+id/tvPassengers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passengers"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/timeGrid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Passenger Buttons -->
        <LinearLayout
            android:id="@+id/passengerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvPassengers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/btnMinus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/rounded_button"
                android:scaleType="fitCenter"
                android:src="@drawable/img" />

            <TextView
                android:id="@+id/tvPassengerCount"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/_2"
                android:textColor="#000000"
                android:textSize="22sp"
                android:gravity="center"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnPlus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/rounded_button"
                android:scaleType="fitCenter"
                android:src="@drawable/img_1" />
        </LinearLayout>

        <!-- Confirm Button -->
        <Button
            android:id="@+id/confirmbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="#5CAF50"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/passengerLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_gravity="end"
        android:fitsSystemWindows="true">

    <!-- Right-side drawer menu -->
    <ListView
        android:id="@+id/nav_list"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@android:color/white"
        android:dividerHeight="1dp"
        android:choiceMode="singleChoice"
        android:padding="16dp"
        android:paddingTop="24dp" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
